--- a/src/index.html
+++ b/src/index.html
@@ -205,11 +205,11 @@
   </div>
   
   <div class="hidden" id="twentyoneExpanded">
-    <img src="" alt="">
+    <img src="./img/amigurumis.jpeg" alt="">
   </div>
 
   <div class="hidden" id="twentytwoExpanded">
-    <img src="" alt="">
+    <img src="./img/chals.jpeg" alt="">
   </div>
 
   <div class="hidden" id="twentythreeExpanded">
@@ -222,8 +222,7 @@
     <img src="./img/navidad.jpg" alt="">
   </div>
 
-  <script src="index.js">
-    <  </script>
+  <script src="index.js"></script>
 </body>
 
 </html>
