Change index file location

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/style.css">
   <title>Document</title>
 </head>
 
@@ -111,118 +111,118 @@
   </section>
 
   <div class="hidden" id="oneExpanded">
-    <img src="./img/valparaiso_01.jpg" alt="">
-    <img src="./img/valparaiso_02.jpg" alt="">
-    <img src="./img/valparaiso_03.jpg" alt="">
-    <img src="./img/valparaiso_04.jpeg" alt="">
+    <img src="./src/img/valparaiso_01.jpg" alt="">
+    <img src="./src/img/valparaiso_02.jpg" alt="">
+    <img src="./src/img/valparaiso_03.jpg" alt="">
+    <img src="./src/img/valparaiso_04.jpeg" alt="">
   </div>
 
   <div class="hidden" id="twoExpanded">
-    <img src="./img/infancia01.png" alt="">
+    <img src="./src/img/infancia01.png" alt="">
   </div>
 
   <div class="hidden" id="threeExpanded">
-    <img src="./img/puntaarenas01.png" alt="">
+    <img src="./src/img/puntaarenas01.png" alt="">
   </div>
 
   <div class="hidden" id="fourExpanded">
-    <img src="./img/puntaarenas02.png" alt="">
+    <img src="./src/img/puntaarenas02.png" alt="">
   </div>
 
   <div class="hidden" id="fiveExpanded">
-    <img src="./img/media02.jpg" alt="">
-    <img src="./img/media03.jpg" alt="">
-    <img src="./img/media01.png" alt="">
+    <img src="./src/img/media02.jpg" alt="">
+    <img src="./src/img/media03.jpg" alt="">
+    <img src="./src/img/media01.png" alt="">
   </div>
 
   <div class="hidden" id="sixExpanded">
-    <img src="./img/pucv01.png" alt="">
+    <img src="./src/img/pucv01.png" alt="">
   </div>
 
   <div class="hidden" id="sevenExpanded">
-    <img src="./img/pucv02.png" alt="">
+    <img src="./src/img/pucv02.png" alt="">
   </div>
 
   <div class="hidden" id="eightExpanded">
-    <img src="./img/pucv03.png" alt="">
+    <img src="./src/img/pucv03.png" alt="">
   </div>
 
   <div class="hidden" id="nineExpanded">
-    <img src="./img/pucv04.png" alt="">
-    <img src="./img/pucv05.png" alt="">
+    <img src="./src/img/pucv04.png" alt="">
+    <img src="./src/img/pucv05.png" alt="">
   </div>
 
   <div class="hidden" id="tenExpanded">
-    <img src="./img/pucv06.png" alt="">
+    <img src="./src/img/pucv06.png" alt="">
   </div>
 
   <div class="hidden" id="elevenExpanded">
-    <img src="./img/pucv07.png" alt="">
+    <img src="./src/img/pucv07.png" alt="">
   </div>
 
   <div class="hidden" id="twelveExpanded">
-    <img src="./img/pucv08.png" alt="">
+    <img src="./src/img/pucv08.png" alt="">
   </div>
 
   <div class="hidden" id="thirteenExpanded">
-    <img src="./img/lab01.png" alt="">
+    <img src="./src/img/lab01.png" alt="">
   </div>
 
   <div class="hidden" id="fourteenExpanded">
-    <img src="./img/lab02.png" alt="">
+    <img src="./src/img/lab02.png" alt="">
   </div>
 
   <div class="hidden" id="fifteenExpanded">
-    <img src="./img/familia02.png" alt="">
+    <img src="./src/img/familia02.png" alt="">
   </div>
 
   <div class="hidden" id="sixteenExpanded">
-    <img src="./img/familia03.jpg" alt="">
+    <img src="./src/img/familia03.jpg" alt="">
   </div>
 
   <div class="hidden" id="seventeenExpanded">
-    <img src="./img/familia03.png" alt="">
+    <img src="./src/img/familia03.png" alt="">
   </div>
 
   <div class="hidden" id="eighteenExpanded">
-    <img src="./img/familia01.png" alt="">
-    <img src="./img/bebes01.jpeg" alt="">
+    <img src="./src/img/familia01.png" alt="">
+    <img src="./src/img/bebes01.jpeg" alt="">
   </div>
 
   <div class="hidden" id="nineteenExpanded">
-    <img src="./img/novio01.png" alt="">
+    <img src="./src/img/novio01.png" alt="">
   </div>
 
   <div class="hidden" id="twentyExpanded">
-    <img src="./img/calcetas.jpg" alt="">
-    <img src="./img/tazón.jpg" alt="">
-    <img src="./img/babyyoda.jpg" alt="">
-    <img src="./img/bolsas.jpg" alt="">
-    <img src="./img/paños.jpg" alt="">
-    <img src="./img/polera.jpg" alt="">
-    <img src="./img/craft05.png" alt="">
-    <img src="./img/craft06.png" alt="">
+    <img src="./src/img/calcetas.jpg" alt="">
+    <img src="./src/img/tazón.jpg" alt="">
+    <img src="./src/img/babyyoda.jpg" alt="">
+    <img src="./src/img/bolsas.jpg" alt="">
+    <img src="./src/img/paños.jpg" alt="">
+    <img src="./src/img/polera.jpg" alt="">
+    <img src="./src/img/craft05.png" alt="">
+    <img src="./src/img/craft06.png" alt="">
   </div>
   
   <div class="hidden" id="twentyoneExpanded">
-    <img src="./img/amigurumis.jpeg" alt="">
+    <img src="./src/img/amigurumis.jpeg" alt="">
   </div>
 
   <div class="hidden" id="twentytwoExpanded">
-    <img src="./img/chals.jpeg" alt="">
+    <img src="./src/img/chals.jpeg" alt="">
   </div>
 
   <div class="hidden" id="twentythreeExpanded">
-    <img src="./img/fan01.png" alt="">
+    <img src="./src/img/fan01.png" alt="">
   </div>
 
   <div class="hidden" id="twentyfourExpanded">
-    <img src="./img/navidad02.jpg" alt="">
-    <img src="./img/navidad03.jpg" alt="">
-    <img src="./img/navidad.jpg" alt="">
+    <img src="./src/img/navidad02.jpg" alt="">
+    <img src="./src/img/navidad03.jpg" alt="">
+    <img src="./src/img/navidad.jpg" alt="">
   </div>
 
-  <script src="index.js"></script>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
